# 31agents

./: .gitignore  AGENTS.md  README.md  knowledge-retrival-agent.py  main.py  pyproject.toml  react.py
agents/: __init__.py  _retriever.py  _tools.py  react_agent.py
docs/: effiel_tower.txt
tests/: test_react_agent.py  test_react_agent_llm_judge.py  test_react_vehicle_tools.py
