[project]
name = "31agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-ollama>=1.1.0",
    "unstructured>=0.22.31",
]
